Change the default level to MainLevel

--- a/Section1/TheBasics/Config/DefaultEngine.ini
+++ b/Section1/TheBasics/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=TheBasics
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Maps/MainLevel.MainLevel
+GameDefaultMap=None
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
