--- a/Section1/TheBasics/Config/DefaultEngine.ini
+++ b/Section1/TheBasics/Config/DefaultEngine.ini
@@ -21,6 +21,9 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.VirtualTextures=True
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+r.Lumen.HardwareRayTracing=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
