--- a/Section1/TheBasics/Config/DefaultEngine.ini
+++ b/Section1/TheBasics/Config/DefaultEngine.ini
@@ -24,6 +24,7 @@ r.VirtualTextures=True
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.Lumen.HardwareRayTracing=True
+r.RayTracing.Shadows=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
